# cli-agent

./: .gitignore  README.md  pyproject.toml
cli_agent/: agent.py  api.py
tests/: test_agent.py
