[tool.poetry]
name = "cli-agent"
version = "0.1.0"
description = ""
authors = ["ehurturk <emirhurturk444@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.6"
langgraph = "^0.2.41"
langchain-openai = "^0.2.4"
langchain-core = "^0.3.14"
python-dotenv = "^1.0.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
