[tool.poetry]
name = "cli-agent"
version = "0.1.0"
description = ""
authors = ["ehurturk <emirhurturk444@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.6"
langgraph = "^0.2.41"
langchain-openai = "^0.2.4"
langchain-core = "^0.3.14"
python-dotenv = "^1.0.1"
flask = {extras = ["async"], version = "^3.0.3"}
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
